# platoon

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yaml  test.sh
infra/: cloudbuild.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/scripts/: monitoring.sh
infra/templates/: container.tpl
proto/: app.proto  node.proto  types.proto
src/: client.rs  main.rs  server.rs  types.rs
src/grpc/: mod.rs  utils.rs
src/raft/: mod.rs  types.rs
src/raft/network/: client.rs  mod.rs  server.rs  utils.rs
src/raft/storage/: engine.rs  log.rs  mod.rs  state_machine.rs
