[package]
name = "platoon"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
openraft = { version = "0.9.17", features = ["serde", "single-term-leader", "storage-v2"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
