[package]
name = "platoon"
version = "0.1.0"
edition = "2021"

[dependencies]
async-tempfile = "0.6.0"
bincode = "1.3.3"
openraft = { version = "0.9.17", features = [
    "serde",
    "single-term-leader",
    "storage-v2",
] }
prost = "0.13.4"
redb = "2.4.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
uuid = { version = "1.12.1", features = ["v6", "v7", "fast-rng"] }
