[package]
name = "platoon"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "platoon"

[dependencies]
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "tracing-log",
    "registry",
] }
console-subscriber = "0.2"
async-tempfile = "0.6.0"
bincode = "1.3.3"
openraft = { version = "0.9.17", features = [
    "serde",
    "single-term-leader",
    "storage-v2",
    "generic-snapshot-data",
    "tracing-log",
] }
prost = "0.13.4"
redb = "2.4.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
uuid = { version = "1.12.1", features = ["v6", "v7", "fast-rng"] }
tracing = { version = "0.1", features = ["log"] }
rand = { version = "0.9.0", features = ["small_rng"] }
lazy_static = "1.5.0"
rand_distr = "0.5.1"
[build-dependencies]
tonic-build = "0.12.3"
